AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(gl-117,1.0,200308190000)
AM_CONFIG_HEADER(config.h)

LIBS="$LIBS -L/usr/X11R6/lib"

AC_PATH_X
AC_PATH_XTRA

AC_ARG_WITH(opengl-dir, AC_HELP_STRING([--with-opengl-dir=<path>],[Search for OpenGL files in <path>]))
AC_ARG_WITH(sdl-dir, AC_HELP_STRING([--with-sdl-dir=<path>],[Search for SDL files in <path>]))

AC_DEFUN(GL_PATH_CHECK, [
AC_MSG_CHECKING(for $1 directory)
 path=""
 for tmp in /usr/local /usr/X11R6 /usr $3
 do
  if test -f $tmp/include/$2 ; then
   path=$tmp
  fi
 done
 if test -z $path ; then
  AC_MSG_RESULT(not found)
 else
  AC_MSG_RESULT($path)
  CPPFLAGS="$CPPFLAGS -I$path/include"
  CXXFLAGS="$CXXFLAGS -I$path/include"
  LIBS="$LIBS -L$path/lib"
 fi
])

AH_TEMPLATE([HAVE_SDL],[Use SDL library])
AH_TEMPLATE([HAVE_SDL_MIXER],[Use SDL mixer library])
AH_TEMPLATE([HAVE_GL],[Use GL library])
AH_TEMPLATE([HAVE_GLU],[Use GLU library])
AH_TEMPLATE([HAVE_GLUT],[Use GLUT library])

LDFLAGS="$LDFLAGS -lm -lGL -lGLU -lglut"
AC_PROG_CXX
AC_PROG_CC
AC_LANG_C
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_C_BIGENDIAN()

GL_PATH_CHECK(OpenGL,GL/gl.h,$with_opengl_dir)
GL_PATH_CHECK(SDL,SDL/SDL.h,$with_sdl_dir)

AC_CHECK_HEADER(GL/gl.h,AC_DEFINE(HAVE_GL),AC_MSG_ERROR(gl.h not found - please install OpenGL- or Mesa-devel))
AC_CHECK_HEADER(GL/glu.h,AC_DEFINE(HAVE_GLU),AC_MSG_ERROR(glu.h not found - please install GLU- or MesaGLU-devel))
AC_CHECK_HEADER(GL/glut.h,AC_DEFINE(HAVE_GLUT),AC_MSG_ERROR(glut.h not found - please install GLUT- or MesaGLUT-devel))
AC_CHECK_HEADER(SDL/SDL.h,AC_DEFINE(HAVE_SDL),AC_MSG_WARN(SDL.h not found - no sounds and no joystick available))
AC_CHECK_HEADER(SDL/SDL_mixer.h,AC_DEFINE(HAVE_SDL_MIXER),AC_MSG_WARN(SDL_mixer.h not found - no advanced sounds available))

AC_CHECK_LIB(GL,glEnable,LIBS="$LIBS -lGL",AC_MSG_WARN(GL not found - please install GL or MesaGL))
AC_CHECK_LIB(GLU,gluPerspective,LIBS="$LIBS -lGLU",AC_MSG_WARN(GLU not found - please install GLU or MesaGLU))
AC_CHECK_LIB(glut,glutMainLoop,LIBS="$LIBS -lglut",AC_MSG_WARN(GLUT not found - please install GLUT or MesaGLUT))
AC_CHECK_LIB(SDL,SDL_Init,LIBS="$LIBS -lSDL -lSDLmain",AC_MSG_WARN(SDL not found - please install SDL),-lpthread)
AC_CHECK_LIB(SDL_mixer,Mix_LoadMUS,LIBS="$LIBS -lSDL_mixer",AC_MSG_WARN(SDL_mixer not found - please install SDL_mixer))

CFLAGS="$CFLAGS"
CPPFLAGS="-DDATADIR='\"$datadir\"' -Wall -pedantic"
CXXFLAGS="$CXXFLAGS"

AC_OUTPUT([ \
Makefile \
src/Makefile \
])
